--- a/generators/templates/Component.stories.tsx.hbs
+++ b/generators/templates/Component.stories.tsx.hbs
@@ -3,7 +3,7 @@ import { Story, Meta } from '@storybook/react'
 import {{pascalCase name}} from '.'
 
 export default {
-  title: '{{pascalCase name}}',
+  title: '{{pascalCase type}}/{{pascalCase name}}',
   component: {{pascalCase name}}
 } as Meta
 
